--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,18 @@
-name: CI - Housing Price Prediction
+name: ML CI Pipeline
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
-
+    branches: [ "main" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -26,8 +26,4 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest || echo "No tests found"
-
-      - name: Build Docker image
-        run: |
-          docker build -t housing-price-app .
+          pytest tests/
