--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run preprocessing
+        run: |
+          python preprocess.py
+
+      - name: Train model
+        run: |
+          python train.py
+
       - name: Run tests
         run: |
           pytest tests/
